--- a/習題/hw10.md
+++ b/習題/hw10.md
@@ -1,4 +1,31 @@
 # 可以求解 n 次多項式的程式
 ```
+import numpy as np
+
+def get_coefficient(degree):
+    while True:
+        try:
+            coefficient = float(input(f"請輸入 x^{degree} 的係數: "))
+            return coefficient
+        except ValueError:
+            print("請輸入有效數字。")
+
+while True:
+    try:
+        degree = int(input("請輸入多項式的次數: "))
+        if degree < 0:
+            print("次數須為非負整數。")
+        else:
+            break
+    except ValueError:
+        print("請輸入有效整數。")
+coefficients = []
+for i in range(degree, -1, -1):
+    coefficient = get_coefficient(i)
+    coefficients.append(coefficient)
+
+roots = np.roots(coefficients)
+
+print("多項式的根為:", roots)
 
 ```
