--- a/習題/hw11.md
+++ b/習題/hw11.md
@@ -1,1 +1,22 @@
 # 希爾伯特經圖靈到 NP-Complete 的故事
+## 希爾伯特第 2 問題
+希爾伯特（Hilbert）是一位德國數學家，提出了23個未解數學問題，其中之一是形式化數學並確保其一致性。
+希爾伯特認為，如果能夠建立一個清晰、明確、無矛盾的公理體系，那麼數學的一致性就可以得到確保。然而，這個問題在後來的歷史中變得更加複雜。
+## 哥德爾完備，不完備定理
+哥德爾的完備性定理和不完備性定理是20世紀數學邏輯中的兩個重要結果，這兩個定理對於理解數學的基礎、形式體系的局限性和邏輯的可解性產生了深遠的影響。
+### 哥德爾的完備性定理
+如果一個陳述在這個體系中是可證明的，那麼它在這個體系中是真實的。換句話說，任何在該體系中成立的陳述都可以被該體系的公理和推論規則所證明。
+### 哥德爾的不完備性定理 
+#### 第一不完備性定理： 
+在任何足夠強大的公理化數學體系中，存在一個陳述，它是真實的但不能在這個體系內被證明。
+#### 第二不完備性定理： 
+如果一個公理體系是一致的（不會同時證明真陳述和假陳述），那麼在這個體系中的某個陳述的真假無法被該體系內的公理和推論所確定。
+
+希爾伯特的問題希望找到一個完備的公理體系來確保數學的一致性。然而，哥德爾的不完備性定理顯示了這樣的目標是不可實現的，因為任何強大到足以包含基礎數學的公理體系都會包含不可解的陳述。
+## Church 與 Lambda Calculus
+Alonzo Church 是20世紀早期的數學家和邏輯學家，他提出了一種形式體系，稱為Lambda演算（Lambda Calculus），它是一種用來研究計算和計算過程的抽象數學模型。
+### Lambda Calculus（Lambda演算）:
+Lambda演算是一種簡單但極具表達能力的計算模型，它包含以下基本元素：
+變數（Variables）： 被用來代表值的符號。
+抽象（Abstraction）： 用來創建函數的過程，類似於數學中的函數定義。
+應用（Application）： 用來應用函數的過程。
