--- a/習題/hw11.md
+++ b/習題/hw11.md
@@ -4,6 +4,8 @@
 希爾伯特認為，如果能夠建立一個清晰、明確、無矛盾的公理體系，那麼數學的一致性就可以得到確保。然而，這個問題在後來的歷史中變得更加複雜。
 ## 哥德爾完備，不完備定理
 哥德爾的完備性定理和不完備性定理是20世紀數學邏輯中的兩個重要結果，這兩個定理對於理解數學的基礎、形式體系的局限性和邏輯的可解性產生了深遠的影響。
+
+希爾伯特的問題希望找到一個完備的公理體系來確保數學的一致性。然而，哥德爾的不完備性定理顯示了這樣的目標是不可實現的，因為任何強大到足以包含基礎數學的公理體系都會包含不可解的陳述。
 ### 哥德爾的完備性定理
 如果一個陳述在這個體系中是可證明的，那麼它在這個體系中是真實的。換句話說，任何在該體系中成立的陳述都可以被該體系的公理和推論規則所證明。
 ### 哥德爾的不完備性定理 
@@ -12,11 +14,38 @@
 #### 第二不完備性定理： 
 如果一個公理體系是一致的（不會同時證明真陳述和假陳述），那麼在這個體系中的某個陳述的真假無法被該體系內的公理和推論所確定。
 
-希爾伯特的問題希望找到一個完備的公理體系來確保數學的一致性。然而，哥德爾的不完備性定理顯示了這樣的目標是不可實現的，因為任何強大到足以包含基礎數學的公理體系都會包含不可解的陳述。
+
 ## Church 與 Lambda Calculus
 Alonzo Church 是20世紀早期的數學家和邏輯學家，他提出了一種形式體系，稱為Lambda演算（Lambda Calculus），它是一種用來研究計算和計算過程的抽象數學模型。
+
+Lambda演算對於理解計算的本質和計算過程的可計算性非常重要，並為後來計算理論和函數式編程的發展奠定了基礎。
 ### Lambda Calculus（Lambda演算）:
 Lambda演算是一種簡單但極具表達能力的計算模型，它包含以下基本元素：
+
 變數（Variables）： 被用來代表值的符號。
+
 抽象（Abstraction）： 用來創建函數的過程，類似於數學中的函數定義。
+
 應用（Application）： 用來應用函數的過程。
+## 圖靈，圖靈機與停止問題
+Alan Turing 是一位英國數學家、邏輯學家和計算機科學家，被廣泛視為計算機科學之父之一。他在20世紀提出了圖靈機（Turing Machine）的概念，並解決了一個被稱為停止問題的重要問題。
+### 圖靈機（Turing Machine）
+圖靈機是一種抽象的計算模型，用來研究計算和可計算性的理論。它由圖靈於1936年提出，旨在描述一種機械式計算的過程。圖靈機包括無窮長的紙帶、一個讀寫頭和一組規則。讀寫頭能夠讀取和寫入紙帶上的符號，而根據預先定義的規則，它可以根據當前的狀態和讀寫頭所讀取的符號執行相應的操作，包括移動、寫入、擦除等。圖靈機的重要性在於它提供了一個清晰而精確的計算模型，能夠模擬任何具有計算能力的機器。
+### 停止問題（Halting Problem）
+停止問題是指對於任意給定的圖靈機和輸入，判斷該圖靈機是否在有限的步驟內停止運行的問題。
+
+在1936年，圖靈通過創造一個無法解決停止問題的悖論性圖靈機，證明了停止問題的不可解性。他的證明使用了對角線論證的方法，顯示了無法建立一個通用的演算法來解決停止問題。這個結果顯示，不可能設計一個程序來判斷所有可能的程序是否會停止。
+## 喬姆斯基階層與機器的關係
+Noam Chomsky 提出的語言理論中的「喬姆斯基階層」是一種描述自然語言結構的分層模型，而與機器的關係主要體現在計算理論和人工智慧領域。
+
+以下是喬姆斯基階層與機器的關係。
+### 圖靈機與計算理論： 
+喬姆斯基階層的概念與計算理論密切相關，特別是與圖靈機的計算模型有關。不同層次的語言文法描述了不同複雜性的計算問題，而圖靈機則用於模擬和理解這些計算過程。
+
+### 語言處理和人工智慧： 
+在自然語言處理和人工智慧的領域，喬姆斯基階層對於理解和生成自然語言結構具有指導意義。機器翻譯、語音識別、自然語言生成等任務受到這些文法層次的啟發和限制。
+
+### 編程語言： 
+編程語言的文法通常可以由上下文無關文法描述，而編譯器和解釋器等計算機軟體使用這種文法來解析和理解程式碼。
+## Steven Cook , SAT 與 NP-Complete
+Steven Cook於1971年證明了布爾可滿足性問題（SAT）是NP-Complete的，這表示SAT問題是NP問題中最難的一類。這引入了NP完全性的概念，即所有NP問題都可以在多項式時間內歸納為NP-Complete問題。
